# Muhammad-Fauzil-Adim-Portofolio-BE

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_QUICK_START.md  PROJECT_API_GUIDE.md  Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  nixpacks.toml  setup_database.sql  setup_projects_table.sql  setup_projects_table_v2.sql  test_connection.md  test_project_api.html
example/src/: main.rs
src/: config.rs  main.rs
src/dtos/: employee_dto.rs  mod.rs  project_dto.rs
src/handlers/: employee_handler.rs  mod.rs  project_handler.rs
src/models/: employee.rs  mod.rs  project.rs
src/repositories/: employee_postgres.rs  mod.rs  project_postgres.rs
src/services/: cloudinary.rs  employee_service.rs  mod.rs  project_service.rs
